syntax = "proto3";

option csharp_namespace = "CarRental.grpc";

package grpc;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";

service Reservation {
  
  rpc CreateReservation (CreateReservationRequest) returns (ReservationDTO);
  rpc GetReservation (GetRequest) returns (NullableReservationDTO);
  rpc UpdateReservation(ReservationDTO) returns (google.protobuf.Empty);
  rpc DeleteReservation(ReservationDTO) returns (google.protobuf.Empty);

}

message ReservationDTO{
	int32 id = 1;
	int32 vehicleId = 2;
int32 clientId =3;
string endDate = 4;
StatusTypes status = 5;
}

message NullableReservationDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		ReservationDTO reservation= 2;
	}
}

message CreateReservationRequest{
	int32 clientId =1;
	int32 vehicleId = 2;
	string endDate = 3;
	StatusTypes status = 4;
}

enum StatusTypes
    {
        Requested = 0;
        Approved = 1;
        Payed = 2;
        Consumed = 3;
		Cancelled = 4;
    }